src/objects/Partner_T_C_Agreement__c.object
<CustomObject>
    <description>PRM Portal terms and conditions for Channel Partners</description>
    <fields>
        <fullName>Accepted_By__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Accepted By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Partner_T_C_Agreements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <label>Accepted Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Partner Account that has accepted the T&amp;C record</description>
        <inlineHelpText>Partner Account that has accepted the T&amp;C record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_T_C_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <label>Terms &amp; Conditions</label>
        <referenceTo>Terms_Conditions__c</referenceTo>
        <relationshipName>Partner_T_C_Agreements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>zPartner T&amp;C Agreement</label>
    <nameField>
        <displayFormat>PTCA-{0}</displayFormat>
        <label>Partner T&amp;C Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner T&amp;C Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>